@@ -2,6 +2,7 @@ package com.openhtmltopdf.pdfboxout.glyphlayout.awt;
 
 import com.openhtmltopdf.pdfboxout.PDFontSupplier;
 import org.apache.pdfbox.glyphlayout.awt.GlyphLayoutProcessorAwt;
+import org.apache.pdfbox.io.IOUtils;
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.pdmodel.font.PDFont;
 
@@ -10,6 +11,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 
 /**
@@ -27,7 +29,7 @@ public class PdfBoxGlyphLayoutExample {
         try (PDDocument doc = new PDDocument()) {
             GlyphLayoutProcessorAwt glyphLayoutProcessor = new GlyphLayoutProcessorAwt();
 
-            PDFont arimo = glyphLayoutProcessor.loadFont(doc, this.getClass().getResourceAsStream("fonts/arimo/Arimo-Regular.ttf"));
+            PDFont arimo = glyphLayoutProcessor.loadFont(doc, this.getClass().getResourceAsStream("src/main/resources/fonts/arimo/Arimo-Regular.ttf"));
 
             PdfBoxRendererBuilderGlyphLayoutAwt builder = new PdfBoxRendererBuilderGlyphLayoutAwt();
             builder.useGlyphLayoutProcessor(glyphLayoutProcessor);
@@ -36,7 +38,8 @@ public class PdfBoxGlyphLayoutExample {
             InputStream is = PdfBoxGlyphLayoutExample.class.getResourceAsStream("/org/openpdf/pdf/GlyphLayoutExample.html");
             Objects.requireNonNull(is, "Could not find GlyphLayoutHtmlExample.html resource");
 
-            String html = new String(is.readAllBytes(), java.nio.charset.StandardCharsets.UTF_8);
+
+            String html = new String(IOUtils.toByteArray(is), StandardCharsets.UTF_8);
 
             builder.withProducer("openhtmltopdf-pdfbox-glyphlayout-example");
             builder.toStream(new FileOutputStream(out));
